--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <input type="checkbox" id="menu-toggle" class="menu-toggle" />
+    <label for="menu-toggle" class="burger">&#9776;</label>
     <title>Travel</title>
     <link rel="stylesheet" href="../davaleba-9/css/reset.css" />
     <link rel="stylesheet" href="../davaleba-9/css/style.css" />
