--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <input type="checkbox" id="menu-toggle" class="menu-toggle" />
-    <label for="menu-toggle" class="burger">&#9776;</label>
     <title>Travel</title>
     <link rel="stylesheet" href="../davaleba-9/css/reset.css" />
     <link rel="stylesheet" href="../davaleba-9/css/style.css" />
   </head>
   <body>
+    <input type="checkbox" id="menu-toggle" class="menu-toggle" />
+    <label for="menu-toggle" class="burger">&#9776;</label>
     <header>
       <nav class="nav-bar">
         <ul>
@@ -49,7 +49,7 @@
           <img src="../davaleba-9/image/meore.svg" alt="Hotel Booking" />
           <h3>HOTEL BOOKING</h3>
           <p>
-            We hope you can visit and enjoy it ths beautiful places with your
+            We hope you can visit and enjoy it these beautiful places with your
             friend and favorite people
           </p>
         </div>
@@ -58,7 +58,7 @@
           <img src="../davaleba-9/image/mesame.svg" alt="FAMILY TRIP PLANNER" />
           <h3>FAMILY TRIP PLANNER</h3>
           <p>
-            We hope you can visit and enjoy it ths beautiful places with your
+            We hope you can visit and enjoy it these beautiful places with your
             friend and favorite people
           </p>
         </div>
@@ -67,7 +67,7 @@
           <img src="../davaleba-9/image/meotxe.svg" alt="CRUISE TOUR" />
           <h3>CRUISE TOUR</h3>
           <p>
-            We hope you can visit and enjoy it ths beautiful places with your
+            We hope you can visit and enjoy it these beautiful places with your
             friend and favorite people
           </p>
         </div>
@@ -76,16 +76,16 @@
           <img src="../davaleba-9/image/mexute.svg" alt="FIRE CAMP" />
           <h3>FIRE CAMP</h3>
           <p>
-            We hope you can visit and enjoy it ths beautiful places with your
+            We hope you can visit and enjoy it these beautiful places with your
             friend and favorite people
           </p>
         </div>
 
         <div class="service-card">
-          <img src="../davaleba-9/image/meqvse.svg" alt="CORPORATE HOLYDAYS" />
-          <h3>CORPORATE HOLYDAYS</h3>
+          <img src="../davaleba-9/image/meqvse.svg" alt="CORPORATE HOLIDAYS" />
+          <h3>CORPORATE HOLIDAYS</h3>
           <p>
-            We hope you can visit and enjoy it ths beautiful places with your
+            We hope you can visit and enjoy it these beautiful places with your
             friend and favorite people
           </p>
         </div>
